# voxel_is_voxel_in_greek

./: .gitmodules  CMakeLists.txt  README.md
src/: Application.cpp  Main.cpp
src/application/: Application.cpp
src/shaders/: basic.frag  basic.vert
